# meme-ai-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  memedog_gmgn.session  pyproject.toml
config/: smart_wallets.txt
dashboard/: app.py
plan/: 00-architecture.md  01-scanner.md  02-hardfilter.md  03-enricher.md  04-scoreengine.md  05-llmjudge.md  06-papertrader.md  07-dashboard-alert.md  08-data-contracts.md  09-twitter-memecoin-strategy-research.md
playbooks/memedog-bitget-momentum/: README.md  backtest.yaml  manifest.yaml
runs/submission_usage_records/: README.md  backtest_outcomes.csv  evaluation_lab_outputs.csv  summary.json  telegram_pipeline_inputs.csv
scripts/: capture_fixtures.py  refresh_source_fixtures.sh  run_backtest.py  run_bitget_playbook_demo.py  run_playbook_backtest.py  seed_demo.py  spike_codex_gmgn.sh  telegram_diagnose.py  telegram_login.py
src/memedog/: __main__.py  app_factory.py  dashboard_helpers.py  orchestrator.py  serve.py  store.py
src/memedogV2/: __init__.py  __main__.py  backtest.py  candidates.py  config.py  config_thresholds.yaml  intake.py  orchestrator.py  scanner.py  serve.py  store.py
tests/: conftest.py  test_app_factory.py  test_dashboard.py  test_dashboard_helpers.py  test_integration_pipeline.py  test_orchestrator.py  test_serve.py  test_store.py
tests/alert/: test_telegram.py
tests/backtest/: test_backtester.py
tests/backtesting/: test_engine.py  test_playbook.py
tests/clients/: test_base.py  test_bitget_mcp.py  test_dexscreener.py  test_helius.py  test_lunarcrush.py  test_ratelimit.py  test_rugcheck.py  (+1 more)
(+207 files in other folders)
