[project]
name = "memedog-radar"
version = "0.1.0"
description = "Solana meme coin (golden-dog) early-momentum monitoring & signal system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "litellm>=1.40",
    "pyyaml>=6.0",
    "streamlit>=1.33",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["live: hits real external APIs; needs keys; run with -m live"]
addopts = "-m 'not live'"

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.txt"]
